fixed on iphone5 view

--- a/client/src/components/NavigationBar/style.css
+++ b/client/src/components/NavigationBar/style.css
@@ -24,7 +24,7 @@
 }
 
 .ant-menu-submenu-title {
-	margin-left: 80px !important;
+	margin-left: 70px !important;
 	color: rgb(214, 40, 40) !important;
-	font-size: 30px !important;
+	font-size: 20px !important;
 }
